# cargo-manifmt

./: Cargo.toml  README.md  changelog.md  cspell.yml  tomlfmt.toml
.github/workflows/: checks.yml  docker.yml  nightly.yml  release.yml
examp/: noreorder.toml  reorder.toml  workspace_dep.toml
fixtures/: noreorder.toml  reorder.toml  workspace_dep.toml
src/: config.rs  fmt.rs  fuzz.rs  main.rs  sort.rs
src/sort/: mod.rs  test.rs
