[package]
name = "cargo-manifmt"
version = "2.0.0-rc3"
authors = [
    "Devin R <devin.ragotzy@gmail.com>",
    "Andronik Ordian <write@reusable.software>",
    "Evan Simmons <esims89@gmail.com>",
]
license = "MIT/Apache-2.0"
description = "Check if tables and items in a .toml file are lexically sorted"
repository = "https://github.com/estk/cargo-manifmt"
keywords = ["cargo", "subcommand", "dependencies", "sort", "check"]
categories = ["development-tools::cargo-plugins", "development-tools"]
edition = "2018"
readme = "README.md"
exclude = ["fixtures"]
default-run = "cargo-manifmt"

# [features]
# fuzz = ["afl"]

[dependencies]
# afl = { version = "0.10", optional = true }
clap = { version = "4.4", features = ["wrap_help", "cargo", "derive"] }
glob = "0.3"
itertools = "0.12.0"
serde = "1.0.188"
taplo = "0.12.1"
termcolor = "1.1"
toml = "0.8.0"
toml_edit = "0.21"
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.0.0"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The following is commented out for releases because of
# https://github.com/DevinR528/cargo-sort/issues/31
# see also https://github.com/rust-lang/cargo/issues/8703

# [[bin]]
# name = "cargo-sort"
# path = "src/main.rs"

# In order to run fuzz
# `cargo install afl`
# `cargo afl build --features=fuzz --bin fuzz`
# `cargo afl target/debug/fuzz`

# [[bin]]
# name = "fuzz"
# path = "src/fuzz.rs"
# required-features = ["fuzz"]
